Changed the input rule to integer values in the "editTextNumberDecimal" input field

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,11 +135,12 @@
         android:layout_marginTop="20dp"
         android:autofillHints=""
         android:hint="@string/default_count"
-        android:inputType="numberDecimal"
+        android:textColorHint="#78909C"
+        android:inputType="number"
         android:labelFor="@+id/pageTextView"
         android:maxLength="3"
         android:textAlignment="center"
-        android:textColorHint="#78909C"
+
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
