--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,8 @@
         app:layout_constraintStart_toEndOf="@+id/formatTextView"
         app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
+
+    <!--
     <CheckBox
         android:id="@+id/a4CheckBox"
         android:layout_width="104dp"
@@ -80,6 +82,42 @@
         app:layout_constraintHorizontal_bias="0.159"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/a3CheckBox" />
+    -->
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/radioGroup"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.143"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/formatTextView">
+
+        <RadioButton
+            android:id="@+id/a4RadioButton"
+            android:layout_width="104dp"
+            android:layout_height="48dp"
+            android:text="@string/a4"
+            android:textSize="20sp"/>
+
+        <RadioButton
+            android:id="@+id/a3RadioButton"
+            android:layout_width="103dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/a3"
+            android:textSize="20sp"/>
+
+        <RadioButton
+            android:id="@+id/a1RadioButton"
+            android:layout_width="103dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/a1"
+            android:textSize="20sp"/>
+    </RadioGroup>
+
+
 
     <TextView
         android:id="@+id/a4TextView"
@@ -89,7 +127,7 @@
         android:text="@string/a4_price"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/a4CheckBox"
+        app:layout_constraintStart_toEndOf="@+id/radioGroup"
         app:layout_constraintTop_toBottomOf="@+id/costTextView" />
 
     <TextView
@@ -101,7 +139,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toEndOf="@+id/a3CheckBox"
+        app:layout_constraintStart_toEndOf="@+id/radioGroup"
         app:layout_constraintTop_toBottomOf="@+id/a4TextView" />
 
     <TextView
@@ -113,7 +151,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.554"
-        app:layout_constraintStart_toEndOf="@+id/a1CheckBox"
+        app:layout_constraintStart_toEndOf="@+id/radioGroup"
         app:layout_constraintTop_toBottomOf="@+id/a3TextView" />
 
     <TextView
@@ -126,7 +164,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.232"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/a1CheckBox" />
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <EditText
         android:id="@+id/editTextNumberDecimal"
